--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "node js/bat.mjs"
+  }
 }
