Fix backend issues

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/nurafianZulkifli/nrfz-dev#readme",
   "dependencies": {
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
