--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,18 @@
   "name": "Buszy",
   "short_name": "Buszy",
   "description": "A web app for bus-related features.",
-  "start_url": "/buszy.html",
+  "start_url": "/nrfz-dev/buszy.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#94d40b",
   "icons": [
     {
-      "src": "img/core-img/favicon.png",
+      "src": "/nrfz-dev/img/core-img/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "img/core-img/favicon.png",
+      "src": "/nrfz-dev/img/core-img/favicon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
