--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Buszy",
   "start_url": "buszy.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#18191a",
   "theme_color": "#007bff",
   "icons": [
     {
