--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,30 @@
 {
-    "liveServer.settings.port": 5500
+    "liveServer.settings.port": 5500,
+    // Editor formatting
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
+    "editor.detectIndentation": false,
+    "editor.formatOnSave": true,
+    // HTML specific
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features",
+        "editor.tabSize": 4
+    },
+    // CSS specific
+    "[css]": {
+        "editor.tabSize": 2
+    },
+    // JavaScript specific
+    "[javascript]": {
+        "editor.tabSize": 4
+    },
+    // JSON specific
+    "[json]": {
+        "editor.tabSize": 4
+    },
+    // File settings
+    "files.encoding": "utf8",
+    "files.eol": "\n",
+    "files.trimTrailingWhitespace": true,
+    "files.insertFinalNewline": true
 }
