2026-03 Feature Update for worksbynrfz

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "editor.formatOnSave": true,
     // HTML specific
     "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features",
+        "editor.defaultFormatter": "Wscats.qf",
         "editor.tabSize": 4
     },
     // CSS specific
