--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Works by NRFZ",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#18191a",
+  "background_color": "#121521",
   "theme_color": "#007bff",
   "icons": [
     {
