--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,4 @@
 {
-    "liveServer.settings.port": 5500,
-    // Editor formatting
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "editor.formatOnSave": true,
-    // HTML specific
-    "[html]": {
-        "editor.defaultFormatter": "Wscats.qf",
-        "editor.tabSize": 4
-    },
-    // CSS specific
-    "[css]": {
-        "editor.tabSize": 2
-    },
-    // JavaScript specific
-    "[javascript]": {
-        "editor.tabSize": 4
-    },
-    // JSON specific
-    "[json]": {
-        "editor.tabSize": 4
-    },
-    // File settings
-    "files.encoding": "utf8",
-    "files.eol": "\n",
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true
+    "liveServer.settings.port": 5500
+    
 }
