--- a/buszy/manifest.json
+++ b/buszy/manifest.json
@@ -2,8 +2,8 @@
   "name": "Buszy - Bus Timings & Alerts",
   "short_name": "Buszy",
   "description": "Real-time bus timings, alerts, and pinned bus stops for Singapore buses",
-  "start_url": "/buszy/",
-  "scope": "/buszy/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#ffffff",
@@ -11,13 +11,13 @@
   "categories": ["transportation", "utilities"],
   "icons": [
     {
-      "src": "/buszy/assets/icon-192.png",
+      "src": "./assets/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/buszy/assets/icon-512.png",
+      "src": "./assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,17 +28,17 @@
       "name": "Bus Timings",
       "short_name": "Timings",
       "description": "Check bus arrival timings",
-      "url": "/buszy/",
+      "url": "./",
       "icons": [
         {
-          "src": "/buszy/assets/icon-192.png",
+          "src": "./assets/icon-192.png",
           "sizes": "192x192"
         }
       ]
     }
   ],
   "share_target": {
-    "action": "/buszy/",
+    "action": "./",
     "method": "POST",
     "enctype": "application/x-www-form-urlencoded",
     "params": {
