--- a/rail-buddy/manifest.json
+++ b/rail-buddy/manifest.json
@@ -2,8 +2,8 @@
   "name": "RailBuddy - Train Status & Alerts",
   "short_name": "RailBuddy",
   "description": "Real-time train line status, delays, and schedules for Singapore MRT and LRT networks",
-  "start_url": "/rail-buddy/",
-  "scope": "/rail-buddy/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#ffffff",
@@ -11,13 +11,13 @@
   "categories": ["transportation", "utilities"],
   "icons": [
     {
-      "src": "/rail-buddy/assets/icon-192.png",
+      "src": "./assets/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/rail-buddy/assets/icon-512.png",
+      "src": "./assets/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,17 +28,17 @@
       "name": "Line Status",
       "short_name": "Status",
       "description": "Check train line status",
-      "url": "/rail-buddy/",
+      "url": "./",
       "icons": [
         {
-          "src": "/rail-buddy/assets/icon-192.png",
+          "src": "./assets/icon-192.png",
           "sizes": "192x192"
         }
       ]
     }
   ],
   "share_target": {
-    "action": "/rail-buddy/",
+    "action": "./",
     "method": "POST",
     "enctype": "application/x-www-form-urlencoded",
     "params": {
